// protoc --java_out=./src ./src/com/poker/protocols/server/proto/DispatchChain.proto 
package com.poker.protocols.server.proto; 

option java_package = "com.poker.protocols.server";
option java_outer_classname = "DispatchChainProto";

message DispatchChain{
	optional int32  src_server_type  = 1;
	optional int32  src_server_id    = 2;
	optional int32  dst_server_type  = 3;
	optional int32  dst_server_id    = 4;
	optional int32  dst_game_group   = 5;
	optional int32  dst_match_group  = 6;
}